--- a/public/index.html
+++ b/public/index.html
@@ -93,18 +93,33 @@
 
 <body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/7.5.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/7.5.2/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-analytics.js"></script>
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyCUewJtKXDW4HK9V-i79AzYxR7IG8zgLTU",
+      authDomain: "udonkonet-4deef.firebaseapp.com",
+      databaseURL: "https://udonkonet-4deef.firebaseio.com",
+      projectId: "udonkonet-4deef",
+      storageBucket: "udonkonet-4deef.appspot.com",
+      messagingSenderId: "824449143952",
+      appId: "1:824449143952:web:8d43e4d357a02c75c1f415",
+      measurementId: "G-9Z8K6BZ9NW"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 
   <center>
     <h1>あの伝説のゲームが再び...</h1>
   </center>
+
 </body>
 
 </html>
