--- a/public/game.html
+++ b/public/game.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <script src="enchantjs/enchant.min.js"></script>
-        <script src="./enchantjs/build/plugins/ammo.js"></script>
-        <script src="./enchantjs/build/plugins/Box2D.js"></script>
-        <script src="./enchantjs/build/plugins/box2d.enchant.js"></script>
-        <script src="./enchantjs/build/plugins/physics.gl.enchant.js"></script>
+<head>
+    <title></title>
+    <script src="enchantjs/enchant.min.js"></script>
+    <script src="./enchantjs/build/plugins/ammo.js"></script>
+    <script src="./enchantjs/build/plugins/Box2D.js"></script>
+    <script src="./enchantjs/build/plugins/box2d.enchant.js"></script>
+    <script src="./enchantjs/build/plugins/physics.gl.enchant.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
-        <style>
-            body {
-                margin-top: auto;
-                margin-bottom: auto;
-                margin-left: 0;
-                margin-right: 0;
-                padding: 0;
-                background-color: #eeeeee;
-            }
-        </style>
-    </head>
+    <style>
+        body {
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: 0;
+            margin-right: 0;
+            padding: 0;
+            background-color: #eeeeee;
+        }
+    </style>
+</head>
 
-    <body>
-        <script src="rensha.js"></script>
-    </body>
+<body>
+    <script src="rensha.js"></script>
+</body>
 
 </html>
