--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <meta property="og:title" content="THE RENSHA - Master of SUIKA-WARI -" />
-    <meta property="og:site_name" content="THE RENSHA - Master of SUIKA-WARI -" />
+    <meta property="og:title" content="ハゲ親父断髪式" />
+    <meta property="og:site_name" content="ハゲ親父断髪式" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="ひたすらスイカをタップして破壊しろ！！" />
-    <meta property="og:url" content="https://www.udonko.net/rensha/index.html" />
+    <meta property="og:description" content="あの最後の1本をひっこぬけ！" />
+    <meta property="og:url" content="https://www.udonko.net/lasthair/index.html" />
     <meta property="og:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png" />
-
 
     <meta name="twitter:card" content="player">
     <meta name="twitter:title" content="THE RENSHA - Master of SUIKA-WARI -">
@@ -26,22 +25,7 @@
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png">
 
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-89357320-1', 'auto');
-        ga('send', 'pageview');
-    </script>
     <style>
         body {
             margin: 0;
@@ -67,11 +51,6 @@
 
         });
     </script>
-
-    <!--PWA-->
-    <link rel="manifest" href="/manifest.json">
-    <script src="/app.js"></script>
-    <script src="/sw.js"></script>
 
 </head>
 
