タッチイベント実装中

--- a/public/game.html
+++ b/public/game.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>ハゲ親父断髪式</title>
     <script src="enchantjs/enchant.min.js"></script>
     <script src="./enchantjs/build/plugins/ammo.js"></script>
     <script src="./enchantjs/build/plugins/Box2D.js"></script>
