--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png" />
 
     <meta name="twitter:card" content="player">
-    <meta name="twitter:title" content="THE RENSHA - Master of SUIKA-WARI -">
+    <meta name="twitter:title" content="ハゲ親父断髪式">
     <meta name="twitter:player" content="https://www.udonko.net/rensha/game.html">
     <meta name="twitter:player:height" content="360">
     <meta name="twitter:player:width" content="360">
