広告周りの調整

--- a/public/game.html
+++ b/public/game.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ハゲ親父断髪式</title>
+    <title>ハゲ親父断髪式 </title>
     <script src="enchantjs/enchant.min.js"></script>
     <script src="./enchantjs/build/plugins/ammo.js"></script>
     <script src="./enchantjs/build/plugins/Box2D.js"></script>
@@ -23,7 +23,9 @@
 </head>
 
 <body>
-    <script src="rensha.js"></script>
+    <div style="width: 100px; height: 100px;">
+        <script src="rensha.js"></script>
+    </div>
 </body>
 
 </html>
