--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,6 @@
     <meta name="twitter:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png">
 
 
-    <!--Adsense AMP-->
-    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
 
     <style>
         body {
@@ -68,19 +65,33 @@
 </head>
 
 <body>
-    <script async src=" https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"> </script>
-    <!-- ハゲ親父断髪式WEB-TOP -->
-    <ins class="adsbygoogle" style="display:inline-block;width:640px;height:100px"
-        data-ad-client="ca-pub-3324877759270339" data-ad-slot="3671704788"></ins>
+    <div style="width:640px; height:640px;  background-color:#000000; opacity: 0.5; margin:auto; padding: auto;">
+        <table width="640" height="640">
+            <tr>
+                <td>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- ハゲ親父断髪式WEB-TOP -->
+                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+                        data-ad-slot="3671704788" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+
+    <iframe src="game.html" id="frame"></iframe>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- ハゲ親父断髪式WEB-Bottom -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339" data-ad-slot="3759975327"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <iframe src="game.html" id="frame"></iframe>
-    <!-- ハゲ親父断髪式WEB-Bottom -->
-    <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-3324877759270339" data-ad-slot="3759975327"
-        data-auto-format="rspv" data-full-width="">
-        <div overflow=""></div>
-    </amp-ad>
+
 </body>
+
 
 </html>
