--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,12 @@
         body {
             margin: 0;
             padding: 0;
-            text-align: center;
+
+            position: relative;
+            left: 0px;
+            top: 0px;
         }
+
 
         #frame {
             border: none;
@@ -45,6 +49,19 @@
             margin-top: 0;
             margin-bottom: 0;
         }
+
+        #ad-top {
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-right: auto;
+            margin-left: auto;
+
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 0px;
+            left: 0px;
+            top: 0px;
+        }
     </style>
     <script>
         $(document).ready(function () {
@@ -52,21 +69,31 @@
             var h = window.innerHeight;
             var size = 0;
             if (w > h) {
-                size = h - 220;
+                size = h;
             } else {
                 size = w;
             }
             $("#frame").width(size);
             $("#frame").height(size);
+            $("#ad-top").width(size);
+            $("#ad-top").height(size);
+            $("#ad-top").css("left", ((w - size) / 2) + "px");
 
+            $("#ad-table").width(size);
+            $("#ad-table").height(size);
         });
     </script>
-
+    <script>
+        function closeAd() {
+            $("#ad-top").hide();
+        };
+    </script>
 </head>
 
 <body>
-    <div style="width:640px; height:640px;  background-color:#000000; opacity: 0.5; margin:auto; padding: auto;">
-        <table width="640" height="640">
+    <iframe src="game.html" id="frame"></iframe>
+    <div id="ad-top" onclick="closeAd();">
+        <table id="ad-table">
             <tr>
                 <td>
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -81,8 +108,6 @@
         </table>
     </div>
 
-
-    <iframe src="game.html" id="frame"></iframe>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- ハゲ親父断髪式WEB-Bottom -->
     <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339" data-ad-slot="3759975327"
@@ -90,7 +115,6 @@
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-
 </body>
 
 
