--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <meta property="og:title" content="ハゲ親父断髪式" />
-    <meta property="og:site_name" content="ハゲ親父断髪式" />
+    <meta property="og:title" content="ハゲ親父断髪式 -あの最後の1本をひっこぬけ！-" />
+    <meta property="og:site_name" content="ハゲ親父断髪式 -あの最後の1本をひっこぬけ！-" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="あの最後の1本をひっこぬけ！" />
+    <meta property="og:description" content="フルスクリーンでプレイ" />
     <meta property="og:url" content="https://hair.udonko.net/index.html" />
     <meta property="og:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png" />
 
@@ -67,6 +67,17 @@
             left: 0px;
             top: 0px;
         }
+
+        #ad-table td {}
+
+        #ad1 {
+            margin-top: -100px;
+            background-color: red;
+        }
+
+        #ad2 {
+            background-color: royalblue;
+        }
     </style>
     <script>
         $(document).ready(function () {
@@ -93,6 +104,14 @@
             $("#ad-table").width(size);
             $("#ad-table").height(size);
         });
+
+        $(window).resize(function () {
+            console.log("resize");
+            var width = $("#ad-top").width();
+            var height = $("#ad-top").height();
+            console.log(width - height);
+            $("#ad-top").css("left", ($(window).width() - width) / 2 + "px");
+        });
     </script>
     <script>
         function closeAd() {
@@ -106,11 +125,15 @@
     <div id="ad-top">
         <table id="ad-table">
             <tr>
-                <td align="right" valign="top">
-                    <button onclick="closeAd();" style="margin:10px; width:44px; height:44px;">×</button>
+                <td height="20" align="right">
+                    <button onclick="closeAd();" style="margin:10px; width:100px; height:100px;">×</button>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" valign="middle">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- ハゲ親父断髪式WEB-TOP -->
-                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+                    <ins id="ad1" class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
                         data-ad-slot="3671704788" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -122,11 +145,12 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- ハゲ親父断髪式WEB-Bottom -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339" data-ad-slot="3759975327"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <ins id="ad2" class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+        data-ad-slot="3759975327" data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+
 </body>
 
 
