広告レイアウトやっとできた

--- a/public/game.html
+++ b/public/game.html
@@ -3,6 +3,13 @@
 
 <head>
     <title>ハゲ親父断髪式 </title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script type="text/javascript" src="script.js"></script>
+
+
     <script src="enchantjs/enchant.min.js"></script>
     <script src="./enchantjs/build/plugins/ammo.js"></script>
     <script src="./enchantjs/build/plugins/Box2D.js"></script>
@@ -20,6 +27,7 @@
             background-color: #eeeeee;
         }
     </style>
+
 </head>
 
 <body>
