--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <meta property="og:title" content="ハゲ親父断髪式 -あの最後の1本をひっこぬけ！-" />
     <meta property="og:site_name" content="ハゲ親父断髪式 -あの最後の1本をひっこぬけ！-" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="フルスクリーンでプレイ" />
+    <meta property="og:description" content="クリックしてプレイ！" />
     <meta property="og:url" content="https://hair.udonko.net/index.html" />
     <meta property="og:image" content="https://www.udonko.net/rensha/images/ogp-rensha.png" />
 
     <!--Twitter Card-->
     <meta name="twitter:card" content="player">
-    <meta name="twitter:title" content="ハゲ親父断髪式">
+    <meta name="twitter:title" content="ハゲ親父断髪式 -あの最後の1本をひっこぬけ！-">
     <meta name="twitter:player" content="https://hair.udonko.net/index.html">
     <meta name="twitter:player:height" content="360">
     <meta name="twitter:player:width" content="360">
