--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,19 @@
     <meta name="twitter:player:height" content="360">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:image" content="https://hair.udonko.net/images/icon512.png">
+
+    <!-- firebase-->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/7.6.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/7.6.1/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
+
     <style>
         html {
             /* overflow: hidden; */
@@ -138,7 +151,7 @@
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        <button class="btn-push" onclick="showAd();">広告を開く</button>
+        <!-- <button class="btn-push" onclick="showAd();">広告を開く</button> -->
     </div>
 </body>
 
