--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 
     <!-- iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <meta name="apple-mobile-web-app-title" content="ハゲ親父断髪式">
+    <link rel="apple-touch-icon" href="images/icon192.png" sizes="192x129">
+    <link rel="apple-touch-icon" href="images/icon256.png" sizes="256x256">
+    <link rel="apple-touch-icon" href="images/icon512.png" sizes="512x512">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
