ファイル名修正

--- a/public/game.html
+++ b/public/game.html
@@ -32,7 +32,7 @@
 
 <body>
     <div style="width: 100px; height: 100px;">
-        <script src="rensha.js"></script>
+        <script src="game.js"></script>
     </div>
 </body>
 
