keyword description 設定

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
     <title>ハゲ親父断髪式</title>
+    <meta name="description" content="あの最後の1本の毛を引っこ抜け！ゲームだから許される！？ハゲ親父に見つからないように気をつけろ！">
+    <meta name="Keywords" content="ハゲ親父断髪式,カジュアルゲーム,インディーズゲーム,マッチング,出会い,漫画,マンガ,アニメ" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- android -->
