--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,10 @@
             margin-right: auto;
             margin-top: 0;
             margin-bottom: 0;
-            max-width: 800px;
-            max-height: 800px;
+            min-width: 320px;
+            min-height: 568px;
+            max-width: 640px;
+            max-height: 1136px;
 
             position: relative;
             z-index: 1;
