PWAプロジェクト設定

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="Keywords" content="ハゲ親父断髪式,カジュアルゲーム,インディーズゲーム,マッチング,出会い,漫画,マンガ,アニメ" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- android -->
+    <!--PWA setting-->
+    <meta name="theme-color" content="#83F1A8">
+
+    <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- iOS -->
