--- a/public/game.html
+++ b/public/game.html
@@ -24,7 +24,7 @@
             margin-left: 0;
             margin-right: 0;
             padding: 0;
-            background-color: #eeeeee;
+            /* background-color: red; */
         }
     </style>
 
